Clean up training experiments notebook

--- a/scripts/training_experiments.ipynb
+++ b/scripts/training_experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "6f7de520-7e2d-46a8-9801-c8447f673484",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "17deff99-8d43-42c5-998d-3a2a018cc1d5",
    "metadata": {},
    "outputs": [],
@@ -227,9 +227,9 @@
        "         [[0.0000, 0.0000, 0.0000],\n",
        "          [0.0000, 0.0000, 0.0000],\n",
        "          [0.0000, 0.0000, 0.0000]]]),\n",
-       " tensor([0.0180, 0.0240, 0.0000, 0.0240, 0.0240, 0.0000, 0.0240, 0.0700, 0.0000,\n",
-       "         0.0300, 0.0240, 0.0240, 0.0240, 0.0240, 0.0240, 0.0000, 0.0000, 0.0000]),\n",
-       " tensor([0.4700, 0.1960, 0.0000, 0.0000]),\n",
+       " tensor([0.0200, 0.0240, 0.0000, 0.0240, 0.0240, 0.0000, 0.0440, 0.0240, 0.0000,\n",
+       "         0.0200, 0.0240, 0.0240, 0.0240, 0.0740, 0.0260, 0.0000, 0.0000, 0.0000]),\n",
+       " tensor([0.2000, 0.4480, 0.0000, 0.0000]),\n",
        " tensor([1.])]"
       ]
      },
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "45e2a186-0104-4495-b63d-150a2074fca0",
    "metadata": {},
    "outputs": [
@@ -252,25 +252,79 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average loss in epoch 0 of generation 1: 6.561356283084562 + 4.8871760619718145 = 11.448532345056377.\n",
-      "Average loss in epoch 1 of generation 1: 6.558689236798406 + 5.055233400807158 = 11.613922637605565.\n",
-      "Average loss in epoch 2 of generation 1: 6.552462897495991 + 4.818212941879483 = 11.370675839375473.\n",
-      "Average loss in epoch 3 of generation 1: 6.58380699693133 + 5.726263093605854 = 12.310070090537184.\n",
-      "Average loss in epoch 4 of generation 1: 6.580648355156459 + 5.042597662938003 = 11.623246018094463.\n",
-      "Average loss in epoch 5 of generation 1: 6.57219272308652 + 4.893622975388008 = 11.465815698474527.\n",
-      "Average loss in epoch 6 of generation 1: 6.5676774232201725 + 5.062087929327794 = 11.629765352547967.\n",
-      "Average loss in epoch 7 of generation 1: 6.5627007720649955 + 4.9325783017634 = 11.495279073828396.\n",
-      "Average loss in epoch 8 of generation 1: 6.5601299905084085 + 5.041202742955801 = 11.60133273346421.\n",
+      "Training loss in epoch 0 of generation 1: 0.12040106638762495 + 0.13458752629413784 = 0.25498859268176277.\n",
+      "Evaluation loss in epoch 0 of generation 1: 0.11795403501291009 + 0.1170065313120169 = 0.234960566324927.\n",
+      "Training loss in epoch 1 of generation 1: 0.12840064112462793 + 1.0217612264748044 = 1.1501618675994325.\n",
+      "Evaluation loss in epoch 1 of generation 1: 0.13682486475939862 + 1.8491846701432 = 1.9860095349025986.\n",
+      "Training loss in epoch 2 of generation 1: 0.1364523731744827 + 1.8756484405967824 = 2.0121008137712653.\n",
+      "Evaluation loss in epoch 2 of generation 1: 0.13682486475939862 + 1.815412631404685 = 1.9522374961640836.\n",
+      "Training loss in epoch 3 of generation 1: 0.1364523734001878 + 1.8491526475883047 = 1.9856050209884926.\n",
+      "Evaluation loss in epoch 3 of generation 1: 0.13682486475939862 + 1.815412631404685 = 1.9522374961640836.\n",
+      "Training loss in epoch 4 of generation 1: 0.1364523731609157 + 1.8491526475883047 = 1.9856050207492204.\n",
+      "Evaluation loss in epoch 4 of generation 1: 0.13682486475939862 + 1.815412631404685 = 1.9522374961640836.\n",
+      "Training loss in epoch 5 of generation 1: 0.1364523734186882 + 1.8491526475883047 = 1.9856050210069929.\n",
+      "Evaluation loss in epoch 5 of generation 1: 0.13682486475939862 + 1.815412631404685 = 1.9522374961640836.\n",
+      "Training loss in epoch 6 of generation 1: 0.1364523731239149 + 1.8491526475883047 = 1.9856050207122196.\n",
+      "Evaluation loss in epoch 6 of generation 1: 0.13682486499621865 + 1.815412631404685 = 1.9522374964009037.\n",
+      "Training loss in epoch 7 of generation 1: 0.13645548976466457 + 1.8491526475883047 = 1.9856081373529693.\n",
+      "Evaluation loss in epoch 7 of generation 1: 0.1368248619964981 + 1.815412631404685 = 1.9522374934011832.\n",
+      "Training loss in epoch 8 of generation 1: 0.13140453011846473 + 1.4097490854476766 = 1.5411536155661414.\n",
+      "Evaluation loss in epoch 8 of generation 1: 0.1180514842900858 + 0.11005122517426374 = 0.22810270946434955.\n",
+      "Training loss in epoch 9 of generation 1: 0.1123396043133454 + 0.10413779306949134 = 0.21647739738283672.\n",
+      "Evaluation loss in epoch 9 of generation 1: 0.11171278560036273 + 0.10438279936831871 = 0.21609558496868145.\n",
+      "Training loss in epoch 10 of generation 1: 0.11112229066461736 + 0.09847203377254027 = 0.20959432443715761.\n",
+      "Evaluation loss in epoch 10 of generation 1: 0.11116127489852684 + 0.09850179613858903 = 0.20966307103711587.\n",
+      "Training loss in epoch 11 of generation 1: 0.11074899919556933 + 0.09320182661081954 = 0.20395082580638885.\n",
+      "Evaluation loss in epoch 11 of generation 1: 0.11092340041347593 + 0.09833844091785476 = 0.2092618413313307.\n",
+      "Training loss in epoch 12 of generation 1: 0.11044755292086292 + 0.09246772193620043 = 0.20291527485706334.\n",
+      "Evaluation loss in epoch 12 of generation 1: 0.11140549343732126 + 0.08730296507602954 = 0.1987084585133508.\n",
+      "Training loss in epoch 13 of generation 1: 0.1104802115547602 + 0.09184930455555128 = 0.20232951611031147.\n",
+      "Evaluation loss in epoch 13 of generation 1: 0.11084603181827464 + 0.0915614754361197 = 0.20240750725439433.\n",
+      "Training loss in epoch 14 of generation 1: 0.11003579735610383 + 0.0914529180885549 = 0.20148871544465874.\n",
+      "Evaluation loss in epoch 14 of generation 1: 0.10991000221340223 + 0.08911920259867408 = 0.1990292048120763.\n",
+      "Training loss in epoch 15 of generation 1: 0.10927604567660007 + 0.08836905575209046 = 0.19764510142869054.\n",
+      "Evaluation loss in epoch 15 of generation 1: 0.10854824208412016 + 0.08513065287454043 = 0.19367889495866059.\n",
+      "Training loss in epoch 16 of generation 1: 0.10870210690203036 + 0.08939233010226884 = 0.1980944370042992.\n",
+      "Evaluation loss in epoch 16 of generation 1: 0.10847039313893002 + 0.08637540992640785 = 0.19484580306533789.\n",
+      "Training loss in epoch 17 of generation 1: 0.10772765511218467 + 0.08792201117626779 = 0.19564966628845246.\n",
+      "Evaluation loss in epoch 17 of generation 1: 0.1080641378660528 + 0.0863079057616177 = 0.1943720436276705.\n",
+      "Training loss in epoch 18 of generation 1: 0.1080997568156897 + 0.08957730924328405 = 0.19767706605897375.\n",
+      "Evaluation loss in epoch 18 of generation 1: 0.10759604059103635 + 0.08303668151829537 = 0.19063272210933171.\n",
+      "Training loss in epoch 19 of generation 1: 0.10702250134896321 + 0.08665543581194955 = 0.19367793716091278.\n",
+      "Evaluation loss in epoch 19 of generation 1: 0.10668770172236604 + 0.08393221843070951 = 0.19061992015307555.\n",
+      "Training loss in epoch 20 of generation 1: 0.10692184089610363 + 0.08727751078793795 = 0.19419935168404157.\n",
+      "Evaluation loss in epoch 20 of generation 1: 0.10743887812656516 + 0.0878986084096608 = 0.19533748653622596.\n",
+      "Training loss in epoch 21 of generation 1: 0.10704892445171035 + 0.08786466160565508 = 0.19491358605736545.\n",
+      "Evaluation loss in epoch 21 of generation 1: 0.10700213886453916 + 0.08429452723747709 = 0.19129666610201623.\n",
+      "Training loss in epoch 22 of generation 1: 0.10633077121480014 + 0.08573979993813141 = 0.19207057115293155.\n",
+      "Evaluation loss in epoch 22 of generation 1: 0.10653474016918192 + 0.08789488906807832 = 0.19442962923726023.\n",
+      "Training loss in epoch 23 of generation 1: 0.10672886716287659 + 0.08650776713733174 = 0.19323663430020832.\n",
+      "Evaluation loss in epoch 23 of generation 1: 0.10697942774339816 + 0.08445041076023545 = 0.1914298385036336.\n",
+      "Training loss in epoch 24 of generation 1: 0.10616668336605116 + 0.08540171115875074 = 0.1915683945248019.\n",
+      "Evaluation loss in epoch 24 of generation 1: 0.10678858931081775 + 0.08376404592364486 = 0.19055263523446261.\n",
+      "Training loss in epoch 25 of generation 1: 0.10644225911464411 + 0.08631193267060994 = 0.19275419178525405.\n",
+      "Evaluation loss in epoch 25 of generation 1: 0.106709639586594 + 0.08844113556700386 = 0.19515077515359786.\n",
+      "Training loss in epoch 26 of generation 1: 0.1062400861228672 + 0.08462601451640954 = 0.19086610063927675.\n",
+      "Evaluation loss in epoch 26 of generation 1: 0.10621994613920277 + 0.0807296324614736 = 0.18694957860067637.\n",
+      "Training loss in epoch 27 of generation 1: 0.10737480629047187 + 0.0906158088681516 = 0.19799061515862348.\n",
+      "Evaluation loss in epoch 27 of generation 1: 0.10744273466203852 + 0.08954010451718697 = 0.1969828391792255.\n",
+      "Training loss in epoch 28 of generation 1: 0.10637750973319529 + 0.08719676663697253 = 0.19357427637016783.\n",
+      "Evaluation loss in epoch 28 of generation 1: 0.10626832342199138 + 0.08775595608318831 = 0.1940242795051797.\n",
+      "Training loss in epoch 29 of generation 1: 0.10652109239271466 + 0.0860200461449533 = 0.19254113853766797.\n",
+      "Evaluation loss in epoch 29 of generation 1: 0.10815569403431843 + 0.08744527193062472 = 0.19560096596494317.\n",
+      "Training loss in epoch 30 of generation 1: 0.10672672299656746 + 0.08594864585321657 = 0.19267536884978403.\n",
+      "Evaluation loss in epoch 30 of generation 1: 0.10792378042818014 + 0.08424973366607075 = 0.1921735140942509.\n",
       "Trainig was interrupted.\n"
      ]
     }
    ],
    "source": [
-    "kl_losses = []\n",
-    "mse_losses = []\n",
+    "\n",
     "\n",
     "try:\n",
     "    for epoch in range(1000):\n",
+    "        total_kl_loss = 0\n",
+    "        total_mse_loss = 0\n",
     "        for states, wall_priors, step_priors, values in training_loader:\n",
     "            states = states.to(device)\n",
     "            wall_priors = wall_priors.to(device)\n",
@@ -279,12 +333,18 @@
     "    \n",
     "            optimizer.zero_grad()\n",
     "            wp, sp, vs = model.forward(states)\n",
-    "            loss = sum(loss_fn(wp, sp, vs, wall_priors, step_priors, values))\n",
-    "    \n",
+    "            kl_loss, mse_loss = loss_fn(wp, sp, vs, wall_priors, step_priors, values)\n",
+    "            total_kl_loss += float(kl_loss)\n",
+    "            total_mse_loss += float(mse_loss)\n",
+    "\n",
+    "            loss = kl_loss + mse_loss\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "            del loss\n",
-    "    \n",
+    "        print(\n",
+    "            f\"Training loss in epoch {epoch} of generation {generation}: {total_kl_loss / len(training_data)} + {total_mse_loss / len(training_data)} = {(total_kl_loss + total_mse_loss) / len(training_data)}.\"\n",
+    "        )\n",
+    "        \n",
     "        model.train(False)\n",
     "        total_kl_loss = 0\n",
     "        total_mse_loss = 0\n",
@@ -297,10 +357,8 @@
     "            kl_loss, mse_loss = loss_fn(wp, sp, vs, wall_priors, step_priors, values)\n",
     "            total_kl_loss += float(kl_loss)\n",
     "            total_mse_loss += float(mse_loss)\n",
-    "        kl_losses.append(total_kl_loss / len(eval_loader))\n",
-    "        mse_losses.append(total_mse_loss / len(eval_loader))\n",
     "        print(\n",
-    "            f\"Average loss in epoch {epoch} of generation {generation}: {total_kl_loss / len(eval_loader)} + {total_mse_loss / len(eval_loader)} = {(total_kl_loss + total_mse_loss) / len(eval_loader)}.\"\n",
+    "            f\"Evaluation loss in epoch {epoch} of generation {generation}: {total_kl_loss / len(eval_data)} + {total_mse_loss / len(eval_data)} = {(total_kl_loss + total_mse_loss) / len(eval_data)}.\"\n",
     "        )\n",
     "except KeyboardInterrupt:\n",
     "    print(\"Trainig was interrupted.\")"
@@ -308,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "ced9ae19-cfea-4b36-9f0b-52d55b3379ef",
    "metadata": {},
    "outputs": [],
@@ -318,23 +376,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "0da072fb-1e1b-4c9e-bb6b-9f607d1859ec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[1.5199e-07, 1.0383e-12, 2.9369e-13, 1.0010e-07, 1.7205e-09, 2.9369e-13,\n",
-       "          1.3715e-08, 1.0499e-13, 2.9369e-13, 2.2141e-09, 2.2504e-06, 2.1463e-13,\n",
-       "          2.8910e-11, 1.6168e-11, 1.4175e-13, 2.9369e-13, 2.9369e-13, 2.9369e-13]],\n",
+       "(tensor([[1.3669e-04, 6.8333e-12, 9.3426e-12, 2.3319e-12, 3.1439e-12, 9.1561e-12,\n",
+       "          2.7555e-11, 3.3933e-07, 8.5234e-12, 1.3690e-06, 8.1702e-10, 2.3860e-12,\n",
+       "          3.5768e-10, 1.6445e-19, 7.3545e-11, 9.4305e-12, 9.1262e-12, 9.4213e-12]],\n",
        "        device='cuda:0', grad_fn=<SigmoidBackward0>),\n",
-       " tensor([[1.0000e+00, 9.9987e-01, 2.4577e-09, 2.3685e-10]], device='cuda:0',\n",
+       " tensor([[9.9592e-01, 9.9970e-01, 1.9444e-09, 3.9429e-06]], device='cuda:0',\n",
        "        grad_fn=<SigmoidBackward0>),\n",
-       " tensor([[0.9366]], device='cuda:0', grad_fn=<TanhBackward0>))"
+       " tensor([[0.9198]], device='cuda:0', grad_fn=<TanhBackward0>))"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,134 +403,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "2818968e-0ccc-46cd-b003-6ebbdbc85d4e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "foo = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "239cb718-7b01-4146-ad8f-4ca7a6bc9069",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "foo.append(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "e950680a-79bc-48a9-b4f3-6d7593230d75",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[3]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "foo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "f7d7d78a-a365-49db-acd5-9457152eb041",
    "metadata": {},
    "outputs": [],
    "source": [
     "save_model(model, models_folder)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "c290bab1-960f-4e7d-968f-d99dd36769ca",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[23], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;43msum\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
-     ]
-    }
-   ],
-   "source": [
-    "sum(1, 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "a87d618c-72fc-4a99-9d9a-78d569fcacd9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sum((1, 2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "edaa56ee-2bde-421e-9d57-35fae43c0cb3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x, y = 1, 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "a8027683-f2c4-4db0-8c0d-996ca58c8dbc",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "'tuple' is an illegal expression for augmented assignment (1979919024.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[26], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    x, y += 3, 4\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'tuple' is an illegal expression for augmented assignment\n"
-     ]
-    }
-   ],
-   "source": [
-    "x, y += 3, 4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0cd1cdeb-c0fa-459d-9331-da58e1c5d7e0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
